--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.2.3",
+    "next-auth": "5.0.0-beta.17",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.3"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@types/node": "20.12.8",
+    "@types/react": "18.3.1",
+    "@typescript-eslint/parser": "^7.8.0",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "eslint-plugin-tailwindcss": "^3.15.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
